# c_ChatApp

./: .gitignore  CMakeLists.txt
include/: chat_handler.h  common.h  file_transfer.h  network.h  utility.h
src/: chat_handler.c  file_transfer.c  main.c  network.c  utility.c
